--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,23 @@
-{erl_opts, [debug_info]}.
+%% -*- mode: Erlang; -*-
+{erl_opts, [{debug_info}]}.
 {deps, []}.
 
-{shell, [
-  % {config, "config/sys.config"},
-    {apps, [fsm]}
-]}.
+{relx, [{release, {fsm, "0.1.0"},
+    [
+        fsm,
+        lager
+    ]},
+
+    {sys_config, "./config/sys.config"},
+   % {vm_args, "./config/vm.args"},
+
+    {dev_mode, true},
+    {include_erts, true},
+
+    {extended_start_script, true}]
+}.
+
+{profiles, [{prod, [{relx, [{dev_mode, false},
+    {include_erts, true}]}]
+}]
+}.
